fixing translator for grids

--- a/Open-ILS/web/conify/global/config/copy_status.html
+++ b/Open-ILS/web/conify/global/config/copy_status.html
@@ -189,7 +189,7 @@
 												setTimeout(
 													'dojo.query(".status_grid_trans_cell_' + row + '").'+
 														'instantiate(openils.widget.TranslatorPopup,{field:"name",'+
-														'targetObject:"window.status_rows['+row+']",unique:"' + row + '"});'+
+														'targetObject:"window.status_rows['+row+']"});'+
 														'status_grid.rowHeightChanged('+row+')',
 													0
 												);
