remove redundant (and broken) code so alternate pull list works again; thanks to Ryan Laverdiere and Dan Scott

--- a/Open-ILS/xul/staff_client/server/admin/index.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/index.xhtml
@@ -70,7 +70,7 @@
 							</div>
 						</td><td>
 							<div style='padding: 8px;'>
-								<a href='javascript:_l("hold_pull_list.xul");'>&staff.server.admin.index.hold_pull_list;</a> <span style="color: red">&staff.server.admin.index.testing;</span>
+								<a href='javascript:window.xulG.new_tab("/xul/server/patron/holds.xul",{"tab_name":"&staff.server.admin.index.hold_pull_list;"},{});'>&staff.server.admin.index.hold_pull_list;</a> <span style="color: red">&staff.server.admin.index.testing;</span>
 							</div>
 							<div style='padding: 8px;'>
 								<a href='javascript:_l("hold_pull_list_classic.xhtml");'>&staff.server.admin.index.hold_pull_list_classic;</a> <span style="color: red">&staff.server.admin.index.testing;</span>
